--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
-    "title":"Blog Title",
-    "subTitle":"Blog description",
-    "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
+    "title":"做一条随心所欲的鱼",
+    "subTitle":"只是随便试试罢了",
+    "avatarUrl":"https://p.qqan.com/up/2021-3/16164672111465100.jpg",
     "GMEEK_VERSION":"last"
 }
